--- a/back/package.json
+++ b/back/package.json
@@ -10,12 +10,18 @@
   "author": "Luc Varoqui",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint-plugin-node": "^9.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^1.7.0",
+    "passport": "^0.4.0",
+    "passport-oauth2": "^1.5.0",
+    "sequelize": "^5.18.4"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "sequelize-cli": "^5.5.1"
   }
 }
