--- a/back/package.json
+++ b/back/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "eslint-plugin-node": "^9.2.0",
     "express": "^4.17.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.5.0",
+    "request": "^2.88.0",
     "sequelize": "^5.18.4"
   },
   "devDependencies": {
