--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate && sequelize-cli db:seed:all"
   },
   "author": "Luc Varoqui",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "cors": "^2.8.5",
     "eslint-plugin-node": "^9.2.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.5.0",
