--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "author": "Luc Varoqui",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
@@ -22,7 +23,6 @@
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.5.0",
-    "request": "^2.88.0",
     "sequelize": "^5.18.4"
   },
   "devDependencies": {
