--- a/back/package.json
+++ b/back/package.json
@@ -3,21 +3,24 @@
   "version": "1.0.0",
   "description": "Back for the PAE booking application.",
   "main": "index.js",
+  "author": "Luc Varoqui",
+  "license": "ISC",
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "scripts": {
     "dev": "nodemon",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .js --ignore-path .gitignore .",
+    "lintfix": "eslint --ext .js --fix --ignore-path .gitignore .",
     "db:reset": "sequelize-cli db:drop && sequelize-cli db:create && sequelize-cli db:migrate",
     "db:seed": "sequelize-cli db:seed:all"
   },
-  "author": "Luc Varoqui",
-  "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
-    "eslint-plugin-node": "^9.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mysql2": "^1.7.0",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "eslint": "^6.3.0",
+    "eslint-plugin-node": "^9.2.0",
     "nodemon": "^1.19.2",
     "sequelize-cli": "^5.5.1"
   }
