--- a/front/package.json
+++ b/front/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "description": "Front for the PAE room booking service",
   "author": "Luc Varoqui",
-  "private": true,
   "scripts": {
     "dev": "nuxt --hostname 0.0.0.0",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
